{
  "version": 4,
  "terraform_version": "0.12.19",
  "serial": 49,
  "lineage": "01f3b4bf-8584-74bd-1764-bef7f3cc7109",
  "resources": [
    {
      "module": "module.gke",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "gke_subnetwork",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "intra_egress",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.gke",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "master_webhooks",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    }
  ]
}